--- a/my.css
+++ b/my.css
@@ -1,25 +1,23 @@
-.btn-add-task {
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
+.content {
+    padding-left: 40px;
 }
 
-.btn-add {
-    border-radius: 100%;
-    width: 3em;
-    height: 3em;
-    padding: 0px;
-    position: absolute;
-    right: 15px;
-    bottom: 15px;
+.header-section h1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .aside {
     background-color: #F8F9FA;
+    padding: 0px;
 }
 
 .aside .list-group {
-    padding: 15px;
+    padding: 1.5em;
+}
+
+.aside .list-group-item {
+    background-color: #F8F9FA;
 }
 
 .aside .list-group-item.active {
@@ -27,15 +25,20 @@
     border-color: #28a745;
 }
 
-.aside .list-group-item {
-    background-color: #F8F9FA;
-}
-
 .badge {
-    margin-left: 15px;
+    margin-left: 1.5em;
 }
 
 .deadline p {
     text-align: right;
     margin-bottom: 0px;
+}
+
+.btn-add-task {
+    border-radius: 100%;
+    width: 3em;
+    height: 3em;
+    padding: 0px;
+    float: right;
+    margin-top: 3em;
 }
